[gd_scene load_steps=4 format=3 uid="uid://dgk65ce31q5uv"]

[ext_resource type="Script" path="res://components/health_component.gd" id="1_gdvwe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1j5r"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqnqs"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[node name="HealthComponent" type="Node2D"]
z_index = 1
script = ExtResource("1_gdvwe")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 1)
offset_left = -12.0
offset_top = -2.0
offset_right = 12.0
offset_bottom = 2.0
theme_override_styles/background = SubResource("StyleBoxFlat_y1j5r")
theme_override_styles/fill = SubResource("StyleBoxFlat_vqnqs")
value = 50.0
show_percentage = false

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="health_updated" from="." to="." method="_on_health_updated"]
